--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,13 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "@grpc/grpc-js": "^1.10.5",
+    "@grpc/proto-loader": "^0.7.12",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.2.0",
@@ -36,7 +39,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.12.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -50,6 +53,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-proto": "^1.171.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
