--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/server/test/jest-e2e.json"
+    "protoc:win:job_application": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=./libs/common/src --ts_proto_opt=nestJs=true ./proto/job_application.proto"
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
@@ -31,7 +31,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ts-proto": "^1.171.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -53,7 +54,6 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "ts-proto": "^1.171.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
@@ -74,7 +74,11 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+    }
   }
 }
