--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,16 @@
     "test:e2e": "jest --config ./apps/server/test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/gateway": "^2.7.2",
     "@apollo/server": "^4.10.2",
+    "@apollo/subgraph": "^2.7.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
+    "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
