--- a/client/package.json
+++ b/client/package.json
@@ -14,18 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
-    "axios": "^1.6.8",
     "lucide": "^0.363.0",
     "lucide-react": "^0.363.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.1.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
     "tailwindcss": "^3.4.1"
