--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,12 @@
   "dependencies": {
     "@apollo/gateway": "^2.7.2",
     "@apollo/server": "^4.10.2",
+    "@apollo/subgraph": "^2.7.2",
     "@grpc/grpc-js": "^1.10.5",
     "@grpc/proto-loader": "^0.7.12",
-    "@apollo/subgraph": "^2.7.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mapped-types": "*",
