--- a/server/package.json
+++ b/server/package.json
@@ -31,10 +31,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "graphql": "^16.8.1",
+    "mysql2": "^3.9.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "ts-proto": "^1.171.0"
+    "ts-proto": "^1.171.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
