--- a/client/package.json
+++ b/client/package.json
@@ -30,12 +30,15 @@
     "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "recharts": "^2.12.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
