--- a/server/package.json
+++ b/server/package.json
@@ -25,15 +25,19 @@
     "@grpc/proto-loader": "^0.7.12",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "graphql": "^16.8.1",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "ts-proto": "^1.171.0"
+    "ts-proto": "^1.171.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
