--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.7",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "apollo-server-express": "^3.13.0",
+    "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
