--- a/server/apps/application/tsconfig.app.json
+++ b/server/apps/application/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/job-application-service"
+    "outDir": "../../dist/apps/application"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
