--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "copy:proto": "node proto/copy-proto.js",
+    "start": "pnpm run copy:proto && nest start",
+    "start:dev": "pnpm run copy:proto && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/server/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -52,6 +53,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "fs-extra": "^11.2.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
