--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "protoc:win:job_application": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=./libs/common/src --ts_proto_opt=nestJs=true ./proto/job_application.proto",
-    "protoc:win:notification": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=./libs/common/src --ts_proto_opt=nestJs=true ./proto/notification.proto"
+    "protoc:win": "node ./proto/protoc.js"
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
