--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "protoc:win": "node ./proto/protoc.js"
+    "protoc:win": "node ./proto/protoc/protoc.win.js",
+    "protoc": "node ./proto/protoc/protoc.js"
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
