--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.14",
+    "@mui/x-charts": "^7.2.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "i18next": "^23.10.1",
