feat: list of applicants

--- a/server/proto/service.config.json
+++ b/server/proto/service.config.json
@@ -10,5 +10,9 @@
     {
         "serviceName": "notification-service",
         "protoFiles": ["notification"]
+    },
+    {
+        "serviceName": "application",
+        "protoFiles": ["application"]
     }
 ]
