--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "recharts": "^2.12.3",
     "slick-carousel": "^1.8.1",
