--- a/server/package.json
+++ b/server/package.json
@@ -37,15 +37,18 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^1.4.11",
     "apollo-server-express": "^3.13.0",
     "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "ts-proto": "^1.172.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
