--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
     "mysql2": "^3.9.4",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
