--- a/server/apps/cv/tsconfig.app.json
+++ b/server/apps/cv/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/cv-service"
+    "outDir": "../../dist/apps/cv"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
