--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@grpc/grpc-js": "^1.10.5",
     "@grpc/proto-loader": "^0.7.12",
     "@nestjs/apollo": "^12.1.0",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.7",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.11",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.6.8",
     "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
     "multer": "1.4.5-lts.1",
@@ -46,6 +48,7 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "ts-proto": "^1.172.0",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
