--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.7",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
@@ -45,9 +46,12 @@
     "axios": "^1.6.8",
     "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
+    "jwks-rsa": "^3.1.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "nestjs-typeorm-paginate": "^4.0.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -63,6 +67,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.12.2",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
