--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "i18next-http-backend": "^2.5.0",
     "lucide": "^0.363.0",
     "lucide-react": "^0.363.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-cv": "^1.6.0",
