--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.2.0",
+    "auth0-js": "^9.26.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
@@ -43,6 +44,8 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/auth0-js": "^9.21.5",
+    "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-slick": "^0.23.13",
