--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,7 @@
     "@grpc/proto-loader": "^0.7.12",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/axios": "^3.0.2",
-    "@nestjs/common": "^10.3.7",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
@@ -45,6 +45,7 @@
     "@types/multer": "^1.4.11",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.8",
+    "class-transformer": "^0.5.1",
     "file-type-mime": "^0.3.10",
     "graphql": "^16.8.1",
     "multer": "1.4.5-lts.1",
