feat: user and job docker

--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -40,8 +40,66 @@ services:
       - POSTGRES_PASSWORD=123456
     volumes:
       - notification-db:/var/lib/postgresql/data
+  user:
+    container_name: user
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - APP=user
+    environment:
+      - DB_HOST=user-db
+      - DB_PORT=5432
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=phuochai1901
+      - DB_USER_DATABASE=applicant
+    depends_on:
+      - user-db
+    networks:
+      - backend
+      - user
+  user-db:
+    container_name: user-db
+    image: postgres:latest
+    networks:
+      - user
+    environment:
+      - POSTGRES_PASSWORD=phuochai1901
+    volumes:
+      - user-db:/var/lib/postgresql/data
+  job:
+    container_name: job
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - APP=job
+    environment:
+      - DB_HOST=job-db
+      - DB_PORT=5432
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=phuochai1901
+      - DB_JOB_DATABASE=job
+    depends_on:
+      - job-db
+    networks:
+      - backend
+      - job
+  job-db:
+    container_name: job-db
+    image: postgres:latest
+    networks:
+      - job
+    environment:
+      - POSTGRES_PASSWORD=phuochai1901
+    volumes:
+      - job-db:/var/lib/postgresql/data
 networks:
   backend:
   notification:
+  user:
+  job:
 volumes:
   notification-db:
+  user-db:
+  job-db:
