--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
     "start:dev": "pnpm run copy:proto && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/server/main",
-    "start:all": "pnpm run copy:proto && concurrently --kill-others --names \"gateway,notification,application,company,cv,employer,job,upload,user\" -c \"auto\" \"nest start gateway\" \"nest start notification-service\" \"nest start application\" \"nest start company-service\" \"nest start cv\" \"nest start employer\" \"nest start job\" \"nest start upload\" \"nest start user\"",
-    "start:all:dev": "pnpm run copy:proto && concurrently --kill-others --names \"gateway,notification,application,company,cv,employer,job,upload,user\" -c \"auto\" \"nest start --watch gateway\" \"nest start --watch notification-service\" \"nest start --watch application\" \"nest start --watch company-service\" \"nest start --watch cv\" \"nest start --watch employer\" \"nest start --watch job\" \"nest start --watch upload\" \"nest start --watch user\"",
+    "start:all": "pnpm run copy:proto && concurrently --kill-others --names \"gateway,notification,application,company,cv,employer,job,user\" -c \"auto\" \"nest start gateway\" \"nest start notification-service\" \"nest start application\" \"nest start company-service\" \"nest start cv\" \"nest start employer\" \"nest start job\" \"nest start user\"",
+    "start:all:dev": "pnpm run copy:proto && concurrently --kill-others --names \"gateway,notification,application,company,cv,employer,job,user\" -c \"auto\" \"nest start --watch gateway\" \"nest start --watch notification-service\" \"nest start --watch application\" \"nest start --watch company-service\" \"nest start --watch cv\" \"nest start --watch employer\" \"nest start --watch job\" \"nest start --watch user\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
