--- a/server/configs/.env.example
+++ b/server/configs/.env.example
@@ -9,3 +9,8 @@ DB_CV_DATABASE=cv
 DB_JOB_DATABASE=job
 DB_EMPLOYER_DATABASE=employer
 DB_USER_DATABASE=user
+AUTH0_ISSUER_URL=https://dev-0oh0fi1avbej1681.us.auth0.com/
+AUTH0_AUDIENCE=http://localhost:300/
+AUTH0_MANAGEMENT_DOMAIN = dev-0oh0fi1avbej1681.us.auth0.com
+AUTH0_MANAGEMENT_CLIENTID = cAkfGoFJl76eGYgg5NdoLgqjRYHjdLog
+AUTH0_MANAGEMENT_CLIENTSECRET = AvgWeyhvl4HckEt_OlJ9I5XmnwaYcmJJ64Mfnotd_lKOfQsN3elgT-EfQPqWId69
