--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
     "@nestjs/typeorm": "^10.0.2",
     "pg": "^8.11.5",
     "typeorm": "^0.3.20"
-  }
+  },
+  "packageManager": "pnpm@8.15.6+sha1.8105075ad0aa306138be128c017e9c41e28ecffa"
 }
