--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.12.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1"
