feat: Load balancing with nginx and docker

--- a/server/proto/service.config.json
+++ b/server/proto/service.config.json
@@ -4,6 +4,10 @@
         "protoFiles": ["application", "notification"]
     },
     {
+        "serviceName": "gateway2",
+        "protoFiles": ["application", "notification"]
+    },
+    {
         "serviceName": "notification-service",
         "protoFiles": ["notification"]
     },
