--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,16 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "testing" ]
+    branches: ['testing']
+    paths:
+      - 'server/**'
   pull_request:
-    branches: [ "tesing" ]
+    branches: ['tesing']
+    paths:
+      - 'server/**'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,14 +23,14 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test user.controller
-    - run: npm test user.service
-    - run: npm test user.repository
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test user.controller
+      - run: npm test user.service
+      - run: npm test user.repository
