--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: ['testing']
-    paths:
-      - 'server/**'
+    branches: ['main']
+  
   pull_request:
-    branches: ['testing']
-    paths:
-      - 'server/**'
+    branches: ['main']
+  
 
 jobs:
   build:
@@ -19,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,6 +27,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+      - run: cd server
       - run: npm ci
       - run: npm run build --if-present
       - run: |
