--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,10 +5,10 @@ name: Node.js CI
 
 on:
   push:
-    branches: ['main']
+    branches: ['testing']
   
   pull_request:
-    branches: ['main']
+    branches: ['testing']
   
 
 jobs:
