--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@apollo/subgraph": "^2.7.2",
     "@aws-sdk/client-s3": "^3.564.0",
     "@aws-sdk/lib-storage": "^3.564.0",
+    "@eventstore/db-client": "^6.2.1",
     "@grpc/grpc-js": "^1.10.5",
     "@grpc/proto-loader": "^0.7.12",
     "@nestjs/apollo": "^12.1.0",
