--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.19",
     "@mui/x-charts": "^7.2.0",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
@@ -28,33 +29,33 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "file-saver": "^2.0.5",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "pdfjs": "^2.5.0",
-    "pdfjs-dist": "^3.7.107",
-    "react-contenteditable": "^3.3.7",
-    "react-frame-component": "^5.2.6",
-    "react-redux": "^9.1.2",
-    "react-to-pdf": "^1.0.1",
-    "restructure": "3.0.0",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.10.1",
     "i18next-http-backend": "^2.5.0",
+    "jspdf": "^2.5.1",
     "lucide": "^0.363.0",
     "lucide-react": "^0.363.0",
     "moment": "^2.30.1",
+    "pdfjs": "^2.5.0",
+    "pdfjs-dist": "^3.7.107",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-cv": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-frame-component": "^5.2.6",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.12.3",
+    "restructure": "3.0.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1"
   },
