--- a/.github/workflows/user-ci.yml
+++ b/.github/workflows/user-ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Unit Test For User Service
         working-directory: ./server
         run: |
-          npm i
+          npm install -g pnpm
           pnpm ci
           pnpm run build --if-present
           pnpm test user.controller
