--- a/server/configs/.env.example
+++ b/server/configs/.env.example
@@ -14,3 +14,5 @@ AUTH0_AUDIENCE=http://localhost:300/
 AUTH0_MANAGEMENT_DOMAIN = dev-0oh0fi1avbej1681.us.auth0.com
 AUTH0_MANAGEMENT_CLIENTID = cAkfGoFJl76eGYgg5NdoLgqjRYHjdLog
 AUTH0_MANAGEMENT_CLIENTSECRET = AvgWeyhvl4HckEt_OlJ9I5XmnwaYcmJJ64Mfnotd_lKOfQsN3elgT-EfQPqWId69
+EVENTSTORE_HOST=localhost
+EVENTSTORE_PORT=2113
