[deploy] feat: seperate files for deploy

--- a/server/deploy-compose.yml
+++ b/server/deploy-compose.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - backend
   nginx:
-    build: ./nginx
+    build: ./nginx/deploy
     ports:
       - '80:80'
     networks:
