--- a/server/nginx/deploy/nginx.conf
+++ b/server/nginx/deploy/nginx.conf
@@ -1,7 +1,7 @@
 
     upstream loadbalancer {
-        server host.docker.internal:4000;
-        server host.docker.internal:4001;
+        server nestjs:4000;
+        server nestjs:4001;
     }
 
     server {
