--- a/server/deploy-compose.yml
+++ b/server/deploy-compose.yml
@@ -37,7 +37,7 @@ services:
       - backend
   nginx:
     build:
-      context: ./nginx
+      context: ./nginx/deploy
       dockerfile: Dockerfile
     ports:
       - '80:80'
@@ -45,6 +45,7 @@ services:
       - backend
     depends_on:
       - nestjs
+    restart: always
   database:
     container_name: database
     image: postgres:latest
